# Spectral-AI

./: .gitignore  ALPHA_BSH_SUMMARY.md  ALPHA_BSH_TECHNICAL_NOTES.md  BUILD.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INDEX.md  INVESTIGATION_RESULTS.md  LEARNINGS.md  MEJORAS.md  OPTIX_HOST_IMPLEMENTATION.md  README.md  README_KERNELS.md  ROADMAP.md  STATUS.md
cuda/: alpha_phase_a.cu  alpha_phase_b.cu  async_pipeline.cu  closest_hit.cu  inception_kernels.cu  inception_resonance.cu  liquidbit_kernels.cu  liquidbit_resonance.cu  miss.cu  optix_host.cpp  optix_router_hitgroup.cu  optix_router_host.cpp  ray_attention.cu  ray_generation.cu  ternary_resonance.cu
cuda/v5/: build_ext.py  build_ternary_ext.py  bvh_torch_ext.cu  check_env.sh  debug_ctypes.sh  run_benchmark.sh  run_benchmark_final.sh  run_benchmark_quantization.sh  run_build_ext.sh  run_test.sh  run_train_multidomain.sh  setup_and_run_fase5.sh  setup_wsl_env.sh  ternary_torch_ext.cu
docs/: ARCHITECTURE.md
include/: alpha_bsh.h  inception_engine.h  liquidbit_resonance.h  optical_attention.h  semantic_bvh.h  spectral_ray.h  token_geometry.h
paper/: spectral_ai_zero_matrix.md
patents/: patent_01_rt_attention.md  patent_02_inception_engine.md  patent_03_spectral_routing.md
patents/figures/: FIGURE_SPECS.md
patents/filing/: ADS_template.md  FILING_GUIDE.md
presentation/: index.html
prototypes/: integration_test.py  integration_test_v2.py
prototypes/benchmark/: compare.py
prototypes/bsh_spectral/: ARCHITECTURE.txt  INDEX.md  QUICKSTART.md  QUICKSTART.txt  README.md  TRAINING_README.md  analysis.py  config.py  final_demo.sh  proto_a.py  test_trained_weights.py  train_dispersion.py  train_dispersion_v2.py  w_dispersion_trained.npy  w_dispersion_v2.npy
prototypes/voronoi_crystal/: proto_b.py
python/: README_TRAINING.md  async_pipeline_bridge.py  benchmark.py  benchmark_cuda_e2e.py  benchmark_cuda_pipeline.py  benchmark_e2e.py  benchmark_e2e_final.py  benchmark_expert_types.py  benchmark_optix_latency.py  benchmark_scaling.py  bvh_router.py  bvh_router_bridge.py  bvh_router_hybrid.py  calibrate_router.py  diagnose_wrapper_gap.py  download_embeddings.py  download_embeddings_v2.py  dupl_score_optimizer.py  embedding_bridge.py  embeddings_3d.npy  embeddings_full.npy  embeddings_stats.txt  eval_hellaswag.py  eval_polysemy.py  expert_lru_cache.py  extract_real_hiddens.py  fuzzy_bsh.py  fuzzy_bsh_autograd.py  fuzzy_bsh_centers.npy  fuzzy_bsh_state.json  gpt2_baseline.py  inception_attention.py  inference.py  liquidbit_bridge.py  liquidbit_lm.py  lyra_techniques.py  micro_expert.py  multi_domain_dataset.py  ohbsc.py  olmoe_bvh_distill.py  (+31 more)
results/: eval_hellaswag_2k_16layer.json  eval_hellaswag_2k_3layer.json  eval_hellaswag_2k_baseline.json  eval_hellaswag_results.json  eval_polysemy_results.json  sweep_prefilter_full.json  sweep_prefilter_results.json
scripts/: calibrate_all_layers.py  eval_all_16_layers.py  patent_benchmarks.sh  rebuild_lost_checkpoints.sh  regenerate_all.sh  train_missing_layers.py  train_remaining_layers.sh
src/: alpha_bsh.cpp  semantic_bvh.cpp  token_geometry.cpp
tests/: batch_runner.cpp  benchmark.cu  benchmark_full.cu  inception_engine_test.cpp  inception_runner.cpp  print_struct_sizes.cpp  test_inception_pipeline.cpp  test_lyra_techniques.py  test_optix_host_structure.cpp  test_polysemy_benchmark.py
zenodo/: preprint_spectral_ai.md  spectral_routing.md
